[gd_scene load_steps=9 format=3 uid="uid://boph07i5pigf6"]

[ext_resource type="Script" path="res://Script/Equipment/Throw/Gravity.gd" id="1_8v70k"]
[ext_resource type="Texture2D" uid="uid://btwhw20sq7ckb" path="res://Asset/Weapon/Nade.png" id="2_uk741"]
[ext_resource type="Texture2D" uid="uid://bmbmw2v1rsoj2" path="res://Asset/Texture/Effect/rectangular2.png" id="4_rn1gm"]
[ext_resource type="PackedScene" uid="uid://b62oc04ai6iwg" path="res://Screen/Asset/Function/Trail.tscn" id="5_lpq4c"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_pp3aa"]
bounce = 0.5

[sub_resource type="CircleShape2D" id="CircleShape2D_hkm0n"]
radius = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6q1k"]
size = Vector2(1024, 820)

[sub_resource type="Gradient" id="Gradient_pqinc"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Gravity" type="RigidBody2D"]
collision_layer = 0
collision_mask = 4
physics_material_override = SubResource("PhysicsMaterial_pp3aa")
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_8v70k")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_uk741")
hframes = 4
vframes = 2
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_hkm0n")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
gravity_space_override = 2
gravity = -490.0
linear_damp_space_override = 2
linear_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -240)
shape = SubResource("RectangleShape2D_s6q1k")
disabled = true

[node name="Trail" parent="." instance=ExtResource("5_lpq4c")]
width = 20.0
default_color = Color(0.7, 0.7, 0.7, 1)
lenght = 20

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Particles" type="CPUParticles2D" parent="."]
emitting = false
texture = ExtResource("4_rn1gm")
direction = Vector2(0, -1)
spread = 2.0
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
scale_amount_min = 2.0
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_pqinc")

[node name="Particles2" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
emission_shape = 3
emission_rect_extents = Vector2(512, 1)
direction = Vector2(0, -1)
spread = 2.0
initial_velocity_min = 500.0
initial_velocity_max = 1000.0
scale_amount_min = 5.0
scale_amount_max = 20.0
color_ramp = SubResource("Gradient_pqinc")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
